--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.1.3",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "firebase": "^5.5.4",
     "git": "^0.1.5",
     "history": "^4.7.2",
     "moment": "^2.22.2",
+    "node-sass": "^4.9.4",
+    "normalize.css": "^8.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-modal": "^3.6.1",
@@ -32,7 +35,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.3.0",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.19.0",
     "uuid": "^3.3.2",
     "webpack": "^3.10.0",
