--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build-babel": "babel src/app.js --out-file=public/scripts/bundle.js --presets=env,react --watch",
     "build-watch": "webpack --watch",
     "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "build:prod": "webpack -p --env production",
+    "start": "node server/server.js",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
