--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "SRM2",
   "version": "1.0.0",
+  "engines": {
+    "node": "9.0.0",
+    "yarn": "1.3.2"
+  },
   "main": "index.js",
-  "license": "MIT",
   "scripts": {
     "live-server": "live-server public",
     "build-babel": "babel src/app.js --out-file=public/scripts/bundle.js --presets=env,react --watch",
