--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dev-server": "webpack-dev-server",
     "build:prod": "webpack -p --env production",
     "start": "node server/server.js",
-    "heroku-postbuild": "yarn run build:prod"
+    "heroku-postbuild": "yarn run build:prod",
+    "prep-for-github-1": "git rm --cached src/private/private.js",
+    "prep-for-github-2": "echo src/private/private.js >> .gitignore"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
