Added github commands

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "build:prod": "webpack -p --env production",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod",
-    "prep-for-github-1": "git rm --cached src/private/private.js",
-    "prep-for-github-2": "echo src/private/private.js >> .gitignore"
+    "github-0": "git checkout github",
+    "github-1": "git merge master",
+    "github-2": "git rm --cached src/private/private.js",
+    "github-3": "echo src/private/private.js >> .gitignore"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
