--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "github-1": "git checkout github",
     "github-2": "git merge master",
     "github-3": "git rm --cached src/private/private.js",
-    "github-4": "echo src/private/private.js >> .gitignore"
+    "github-4": "echo src/private/private.js >> .gitignore",
+    "github-5": "git push"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
