--- a/package.json
+++ b/package.json
@@ -19,7 +19,15 @@
     "github-2": "git merge master",
     "github-3": "git rm --cached src/private/private.js",
     "github-4": "echo src/private/private.js >> .gitignore",
-    "github-5": "git push"
+    "github-5": "git add -A",
+    "github-6": "git commit",
+    "github-7": "git push",
+    "github-8": "git checkout master",
+    "github-9": "git add src/private/private.js",
+    "github-10": "// delete the private line",
+    "github-11": "git add -A",
+    "github-12": "git commit",
+    "github-13": "git push heroku master",
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
