--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "normalize.css": "^8.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-ga": "^2.5.6",
     "react-modal": "^3.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
