--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "github-13": "git push heroku master"
   },
   "dependencies": {
+    "amplitude-js": "^4.6.0-beta.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
