--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-modal": "^3.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-tooltip": "^3.10.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
