--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "github-13": "git push heroku master"
   },
   "dependencies": {
+    "@material/select": "^1.1.0",
     "amplitude-js": "^4.6.0-beta.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
@@ -39,14 +40,19 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.3.1",
     "css-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "firebase": "^5.5.4",
     "git": "^0.1.5",
     "history": "^4.7.2",
+    "materialize-css": "^1.0.0",
     "moment": "^2.22.2",
+    "muicss": "^0.9.41",
     "node-sass": "^4.10.0",
     "normalize.css": "^8.0.0",
+    "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-ga": "^2.5.6",
