--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@material/select": "^1.1.0",
     "amplitude-js": "^4.6.0-beta.2",
+    "array-sort": "^1.0.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -41,6 +42,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "css-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "firebase": "^5.5.4",
@@ -67,5 +69,6 @@
     "uuid": "^3.3.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
-  }
+  },
+  "license": "No license"
 }
